# SPDX-License-Identifier: MPL-2.0

# This Source Code Form is subject to the terms of the Mozilla Public License, v. 2.0.
# If a copy of the MPL was not distributed with this file, You can obtain one at http://mozilla.org/MPL/2.0/.

cmake_minimum_required( VERSION 3.30 )

find_package( Boost REQUIRED COMPONENTS program_options )

add_executable( arinc_665_media_set_compiler )

target_sources(
  arinc_665_media_set_compiler
  PRIVATE arinc_665_media_set_compiler.cpp )

target_compile_features( arinc_665_media_set_compiler PRIVATE cxx_std_23 )

target_compile_options(
  arinc_665_media_set_compiler

  PRIVATE
    $<$<CXX_COMPILER_ID:MSVC>:/W3>
    # Disable Warning for exporting classes with std::* private members
    $<$<CXX_COMPILER_ID:MSVC>:/wd4251>
    # Disable Warning for exporting classes, which derives from std::*
    $<$<CXX_COMPILER_ID:MSVC>:/wd4275>

    $<$<CXX_COMPILER_ID:GNU>:-Wall>
    $<$<CXX_COMPILER_ID:GNU>:-Wextra>

    $<$<CXX_COMPILER_ID:Clang>:-Wall>
    $<$<CXX_COMPILER_ID:Clang>:-Wextra> )

target_link_libraries( arinc_665_media_set_compiler PRIVATE arinc_665 Boost::program_options )

set_property(
  DIRECTORY ${PROJECT_SOURCE_DIR}
  APPEND
  PROPERTY DOC_PATHS ${CMAKE_CURRENT_SOURCE_DIR} )

set_property(
  DIRECTORY ${PROJECT_SOURCE_DIR}
  APPEND
  PROPERTY MAN_PATHS
    ${CMAKE_CURRENT_SOURCE_DIR}/arinc_665_media_set_compiler.adoc )

install(
  TARGETS arinc_665_media_set_compiler
  RUNTIME_DEPENDENCY_SET arinc_665-runtime-deps
  COMPONENT runtime )
